JumpScript/tests/baselines/reference/declareAlreadySeen.errors.txt
tests/cases/compiler/declareAlreadySeen.jump(2,13): error TS1030: 'declare' modifier already seen.
tests/cases/compiler/declareAlreadySeen.jump(3,13): error TS1030: 'declare' modifier already seen.
tests/cases/compiler/declareAlreadySeen.jump(5,13): error TS1030: 'declare' modifier already seen.
tests/cases/compiler/declareAlreadySeen.jump(7,13): error TS1030: 'declare' modifier already seen.


==== tests/cases/compiler/declareAlreadySeen.jump (4 errors) ====
    module M {
        declare declare var x;
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
        declare declare function f();
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
    
        declare declare module N { }  
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
    
        declare declare class C { }
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
    }